# alloy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  ROADMAP.md  alloy-spec-v1.md  gen_linkset.py  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  v0.3.0.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/release-notes/: v0.2.2.md  v0.3.1.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  docs.yml  linkcheck.yml  nightly.yml  release.yml
alloy/: command.py  config.py  types.py
alloy/models/: base.py  openai.py
docs/: backends.md  commands.md  configuration.md  contributing-docs.md  cookbook.md  equivalence.md  examples.md  flagship-examples.md  getting-started.md  index.md  observability.md  outputs.md  roadmap.md  robots.txt  stability.md  testing.md  tool_recipes.md  typing.md  whats-new.md
docs/api/: alloy.md  ask.md  command.md  config.md  errors.md  index.md  tool.md  types.md
docs/architecture/: command-lifecycle.md  overview.md  provider-abstraction.md  type-system.md
docs/assets/: mermaid-init.js  theme.css
docs/examples/: commands.md  exploration.md  index.md  integration.md  tools.md  workflows.md
docs/guide/: commands.md  configuration.md  contracts.md  core-concepts.md  pitfalls.md  production.md  providers.md  streaming.md  structured-outputs.md  tools-and-workflows.md
docs/tutorial/: index.md
examples/: README.md  basic_usage.py  csv_to_api.py  requirements.txt  tools_demo.py
examples/00-explore/: 00_hello.py  01_ask_basic.py  02_ask_with_context.py  03_ask_with_tools.py  README.md
examples/10-commands/: 01_first_command.py  02_command_with_params.py  03_async_command.py  04_error_handling.py  README.md
examples/20-typed/: 01_extract_primitive.py  02_dataclass_output.py  03_list_output.py  04_csv_to_api.py  README.md
examples/30-tools/: 01_simple_tool.py  02_command_with_tools.py  03_parallel_tools.py  04_tool_recipes.py  README.md  _sample.txt
examples/40-contracts/: 01_require_ensure.py  02_workflow_contracts.py  03_self_correcting.py  04_payment_pipeline.py  README.md
examples/50-composition/: 01_command_as_tool.py  02_routing_triage.py  03_recursive_analysis.py  04_translator_network.py  README.md
examples/60-integration/: 01_with_pandas.py  02_flask_endpoint.py  03_batch_processor.py  04_pytest_generator.py  README.md
examples/70-providers/: 00_switch_providers.py  01_same_task_openai.py  02_same_task_anthropic.py  03_same_task_gemini.py  04_same_task_ollama.py  README.md
examples/80-patterns/: 01_rag_citations.py  02_self_refine.py  03_pii_sanitize.py  04_streaming_updates.py  05_retry_strategies.py  06_stateful_assistant.py  07_conversation_history.py  08_streaming_limits.py  README.md
examples/90-advanced/: 01_deep_agents.py  02_deep_research.py  03_multi_modal.py  04_observability.py  05_eval_simple.py  06_guardrail_router.py  README.md
examples/agent_patterns/: agents_as_tools.py  deterministic_workflows.py
examples/basic/: dynamic_system_prompts.py  modalities.py  streaming_outputs.py
examples/handoffs/: triage_pattern.py
examples/patterns/: commands_as_tools.py  dbc_tool_loop.py  deep_agents.py  deterministic_workflows.py  triage_routing.py
overrides/partials/: extra-head.html
scripts/: smoke_examples.py  sync_brand_assets.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/backends/: index.html
site/commands/: index.html
site/configuration/: index.html
site/contributing-docs/: index.html
site/examples/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/whats-new/: index.html
src/alloy/: __init__.py  __init__.pyi  ask.py  builtins.py  command.py  config.py  errors.py  react.py  tool.py  types.py
tests/: __init__.py  conftest.py  test_async.py  test_backends.py  test_commands.py  test_env_config.py
tests/benchmarks/: test_parse_perf.py
tests/examples/: test_examples_smoke.py
tests/integration/: test_anthropic_end_to_end.py  test_dbc_openai_feedback.py  test_gemini_end_to_end.py  test_ollama_end_to_end.py  test_openai_end_to_end.py
tests/parity_live/: test_price_extraction.py
tests/providers/: test_anthropic_adapter.py  test_anthropic_finalize_followup.py  test_anthropic_streaming.py  test_anthropic_tool_limit_raises.py  test_concurrency_caps.py  test_gemini_adapter.py  test_gemini_finalize_followup.py  test_gemini_streaming.py  test_gemini_tool_limit_raises.py  test_ollama_adapter.py  test_ollama_streaming.py  test_openai_adapter.py  test_openai_async_parallel.py  test_openai_finalize_followup.py  test_openai_streaming.py  test_openai_tool_limit_raises.py  test_streaming_equivalence.py  test_tools_optional_params_anthropic.py  test_tools_optional_params_gemini.py  test_tools_optional_params_openai.py
tests/typecheck/: test_stub_typing.py
tests/unit/: test_async.py  test_backends.py  test_builtin_tools.py  test_command_annotation_output.py  test_command_authoring_contracts.py  test_command_parse_failure.py  test_commands.py  test_dbc_backend.py  test_env_config.py  test_missing_output_contract.py  test_openai_async_parallel.py  test_openai_dbc_feedback.py  test_openai_finalize_followup.py  test_openai_tool_limit_raises.py  test_per_call_system_override.py  test_streaming_policy_unit.py  test_strict_structured_outputs.py  test_tool_contracts.py
tests/utils/: normalization.py  oracle.py
(+56 files in other folders)
