[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alloy"
version = "0.1.0"
description = "Alloy (Python): Python for logic. English for intelligence."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alloy Contributors" }]
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0", "python-dotenv>=1.0.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
pretty = true
exclude = [".venv/"]
