[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alloy"
version = "0.1.0"
description = "Alloy (Python): Python for logic. English for intelligence."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alloy Contributors" }]
license = { text = "Proprietary" }
dependencies = []
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/openai/alloy-py"
Repository = "https://github.com/openai/alloy-py"
Issues = "https://github.com/openai/alloy-py/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["alloy*"]

[project.optional-dependencies]
openai = ["openai>=1.0.0", "python-dotenv>=1.0.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
  "mypy>=1.8.0",
  "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
pretty = true
exclude = [".venv/"]
